--- a/app/src/main/res/drawable/button_day.xml
+++ b/app/src/main/res/drawable/button_day.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:color="@color/teal_200"/>
-    <item android:color="@color/white"/>
+<!--    <item android:state_checked="true" android:color="@color/teal_200"/>
+    <item android:color="@color/white"/>-->
+    <item android:state_checked="true">
+        <shape
+            android:shape="oval" android:padding="6dp" >
+            <stroke android:width="1dp" android:color="@color/teal_200" />
+            <solid android:color="@color/teal_200" />
+        </shape>
+    </item>
+    <item>
+        <shape
+            android:shape="oval" android:padding="6dp" >
+            <solid android:color="@color/white" />
+        </shape>
+    </item>
 </selector>
