--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,23 +10,24 @@
     <include layout="@layout/toolbar_main_layout"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="16dp"
-        android:title="@string/main_toolbar_title"/>
+        android:title="@string/main_toolbar_title"
+        android:elevation="56dp"/>
 
     <ToggleButton
         android:id="@+id/button1"
         style="@style/ToggleButtonStyle"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:onClick="clickButton"
         android:text="@string/text_button_1"
-        android:textOn="@string/text_button_1"
         android:textOff="@string/text_button_1"
+        android:textOn="@string/text_button_1"
         app:layout_constraintBaseline_toBaselineOf="@+id/button2"
         app:layout_constraintEnd_toStartOf="@+id/button2" />
 
     <ToggleButton
         android:id="@+id/button2"
         style="@style/ToggleButtonStyle"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="32dp"
         android:onClick="clickButton"
         android:text="@string/text_button_2"
         android:textOff="@string/text_button_2"
@@ -38,18 +39,18 @@
     <ToggleButton
         android:id="@+id/button3"
         style="@style/ToggleButtonStyle"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:onClick="clickButton"
         android:text="@string/text_button_3"
-        android:textOn="@string/text_button_3"
         android:textOff="@string/text_button_3"
+        android:textOn="@string/text_button_3"
         app:layout_constraintBaseline_toBaselineOf="@+id/button2"
         app:layout_constraintStart_toEndOf="@+id/button2" />
 
     <ToggleButton
         android:id="@+id/button4"
         style="@style/ToggleButtonStyle"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:onClick="clickButton"
         android:text="@string/text_button_4"
         android:textOn="@string/text_button_4"
@@ -70,12 +71,12 @@
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.402" />
+        app:layout_constraintVertical_bias="0.322" />
 
     <ToggleButton
         android:id="@+id/button6"
         style="@style/ToggleButtonStyle"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:onClick="clickButton"
         android:text="@string/text_button_6"
         android:textOn="@string/text_button_6"
@@ -86,7 +87,7 @@
     <ToggleButton
         android:id="@+id/button7"
         style="@style/ToggleButtonStyle"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:onClick="clickButton"
         android:text="@string/text_button_7"
         android:textOn="@string/text_button_7"
@@ -97,7 +98,7 @@
     <ToggleButton
         android:id="@+id/button8"
         style="@style/ToggleButtonStyle"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:onClick="clickButton"
         android:text="@string/text_button_8"
         android:textOn="@string/text_button_8"
@@ -109,7 +110,7 @@
     <ToggleButton
         android:id="@+id/button9"
         style="@style/ToggleButtonStyle"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:onClick="clickButton"
         android:text="@string/text_button_9"
         android:textOn="@string/text_button_9"
@@ -120,7 +121,8 @@
     <ToggleButton
         android:id="@+id/button10"
         style="@style/ToggleButtonStyle"
-        android:layout_marginTop="44dp"
+        android:textSize="22sp"
+        android:layout_marginTop="56dp"
         android:onClick="clickButton"
         android:text="@string/text_button_10"
         android:textOff="@string/text_button_10"
@@ -136,7 +138,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="@string/text_bingo_count"
-        android:textColor="?attr/buttonTextColor"
+        android:textColorPrimary="?attr/textColor"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
