--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/setting_menu"
-        android:icon="@drawable/ic_baseline_settings_grey"
+        android:icon="?attr/setting_icon"
         android:title="@string/setting_text"
         app:showAsAction="ifRoom" />
 </menu>
