--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="grey_1">#FF333333</color>
+    <color name="grey_2">#FF4F4F4F</color>
+    <color name="grey_10">#FFF5F5F5</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
