--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -4,7 +4,9 @@
     <EditTextPreference
         app:key="username"
         app:title="@string/username_text"
-        app:useSimpleSummaryProvider="true" />
+        app:useSimpleSummaryProvider="true"
+        app:allowDividerAbove="true"
+        app:allowDividerBelow="true" />
 
     <ListPreference
         app:entries="@array/theme_entries"
@@ -12,6 +14,8 @@
         app:defaultValue="system"
         app:key="theme_preference"
         app:title="@string/theme_title"
-        app:useSimpleSummaryProvider="true" />
+        app:useSimpleSummaryProvider="true"
+        app:allowDividerAbove="true"
+        app:allowDividerBelow="true" />
 
 </PreferenceScreen>
