Adding edit and validate buttons for bingo fragment

--- a/app/src/main/res/layout/fragment_bingo.xml
+++ b/app/src/main/res/layout/fragment_bingo.xml
@@ -123,7 +123,7 @@
     <ToggleButton
         android:id="@+id/button10"
         style="@style/ToggleButtonStyle"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="32dp"
         android:text="@string/text_button_10"
         android:textOff="@string/text_button_10"
         android:textOn="@string/text_button_10"
@@ -138,15 +138,40 @@
         android:id="@+id/textViewBingoCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="48dp"
         android:text="@string/text_bingo_count"
         android:textColor="?attr/textColor"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/okButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button10" />
+
+    <Button
+        android:id="@+id/okButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/text_ok_button"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewBingoCount" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="?android:selectableItemBackground"
+        android:contentDescription="@string/description_edit_button"
+        android:src="?attr/edit_button_icon"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
