--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,7 @@
         <!-- Customize your theme here. -->
         <item name="textColor">@color/black</item>
         <item name="button_background">@drawable/button_day</item>
+        <item name="edit_button_icon">@drawable/ic_baseline_edit_black</item>
         <!-- Toolbar -->
         <item name="setting_icon">@drawable/ic_baseline_settings_black</item>
     </style>
