--- a/app/src/main/res/layout/fragment_bingo.xml
+++ b/app/src/main/res/layout/fragment_bingo.xml
@@ -162,7 +162,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewBingoCount" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/editButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
