--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_main">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
+        app:tabSelectedTextColor="?attr/textColor"
+        app:textColor="?attr/textColorSecondary">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
