--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="textColor" format="color" />
+    <attr name="textColorSecondary" format="color" />
     <attr name="button_background" format="reference" />
     <attr name="setting_icon" format="reference" />
     <attr name="edit_button_icon" format="reference" />
