--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,7 @@
         <item name="colorPrimaryDark">@color/teal_700</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">@color/teal_700</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -16,6 +17,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>
         <!-- Customize your theme here. -->
         <item name="textColor">@color/black</item>
+<!--        <item name="textColorSecondary">@color/grey_2</item>-->
         <item name="button_background">@drawable/button_day</item>
         <item name="edit_button_icon">@drawable/ic_baseline_edit_black</item>
         <!-- Toolbar -->
