--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -2,11 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditTextPreference
+        app:allowDividerAbove="true"
+        app:allowDividerBelow="true"
         app:key="username"
         app:title="@string/username_text"
         app:useSimpleSummaryProvider="true"
-        app:allowDividerAbove="true"
-        app:allowDividerBelow="true" />
+        android:textColor="@color/teal_200"/>
 
     <ListPreference
         app:entries="@array/theme_entries"
@@ -16,6 +17,7 @@
         app:title="@string/theme_title"
         app:useSimpleSummaryProvider="true"
         app:allowDividerAbove="true"
-        app:allowDividerBelow="true" />
+        app:allowDividerBelow="true"
+        app:textColor="?attr/textColor"/>
 
 </PreferenceScreen>
