--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/calendar_menu"
+        android:icon="?attr/calendar_icon"
+        android:title="@string/calendar_button_text"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/setting_menu"
         android:icon="?attr/setting_icon"
         android:title="@string/setting_text"
