--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,5 @@
     <attr name="button_background" format="reference" />
     <attr name="setting_icon" format="reference" />
     <attr name="edit_button_icon" format="reference" />
+    <attr name="calendar_icon" format="reference" />
 </resources>
