--- a/app/src/main/res/drawable/button_bingo.xml
+++ b/app/src/main/res/drawable/button_bingo.xml
@@ -3,13 +3,14 @@
     <item android:state_checked="true">
         <shape
             android:shape="oval" android:padding="6dp" >
-            <solid android:color="@color/purple_700" />
+            <solid android:color="?attr/colorPrimary" />
         </shape>
     </item>
     <item>
         <shape
             android:shape="oval" android:padding="6dp" >
-            <solid android:color="@color/grey_1" />
+            <stroke android:width="1dp" android:color="?attr/colorPrimary" />
+            <solid android:color="?attr/colorSurface" />
         </shape>
     </item>
 </selector>
