--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -25,11 +25,11 @@
         android:layout_marginTop="24dp"
         android:gravity="center"
         android:text="@string/text_calendar_average"
-        android:textColor="?attr/textColor"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+<!--    android:textColor="?attr/textColor"-->
 </androidx.constraintlayout.widget.ConstraintLayout>
