--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!--
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -10,4 +11,69 @@
     <color name="grey_2">#FF4F4F4F</color>
     <color name="grey_10">#FFF5F5F5</color>
     <color name="white">#FFFFFFFF</color>
+    -->
+
+
+    <!-- Light Theme -->
+    <color name="accent_light">@color/md_blue_A400</color>
+    <color name="divider_light">@color/md_black_1000_12</color>
+    <color name="surface_light">@color/md_white_1000</color>
+    <color name="background_light">@color/md_grey_50</color>
+    <color name="ripple_colored_light">@color/md_blue_A400_12</color>
+
+    <!-- Light Blue Theme -->
+    <color name="accent_lightblue">#54759E</color>
+    <color name="ripple_colored_lightblue">#1F54759E</color>
+
+    <!-- Dark Theme -->
+    <color name="accent_dark">#3399FF</color>
+    <color name="divider_dark">@color/md_white_1000_12</color>
+    <color name="surface_dark">#242529</color>
+    <color name="background_dark">#202125</color>
+    <color name="ripple_colored_dark">#1F3399FF</color>
+
+    <!-- Dark Blue Theme -->
+    <color name="accent_darkblue">#54759E</color>
+    <color name="ripple_colored_darkblue">#1F54759E</color>
+
+    <!-- Material Design Colors -->
+    <color name="md_black_1000">#000000</color>
+    <color name="md_black_1000_87">#DE000000</color>
+    <color name="md_black_1000_54">#8A000000</color>
+    <color name="md_black_1000_38">#61000000</color>
+    <color name="md_black_1000_12">#1F000000</color>
+    <color name="md_black_1000_8">#14000000</color>
+    <color name="md_black_1000_6">#0F000000</color>
+
+    <color name="md_white_1000">#FFFFFFFF</color>
+    <color name="md_white_1000_70">#B3FFFFFF</color>
+    <color name="md_white_1000_54">#8AFFFFFF</color>
+    <color name="md_white_1000_50">#80FFFFFF</color>
+    <color name="md_white_1000_20">#33FFFFFF</color>
+    <color name="md_white_1000_12">#1FFFFFFF</color>
+    <color name="md_white_1000_8">#14FFFFFF</color>
+    <color name="md_white_1000_6">#0FFFFFFF</color>
+
+    <color name="md_grey_50">#FAFAFA</color>
+    <color name="md_grey_50_75">#BFFAFAFA</color>
+    <color name="md_grey_100">#F5F5F5</color>
+    <color name="md_grey_300">#E0E0E0</color>
+    <color name="md_grey_800">#424242</color>
+    <color name="md_grey_900">#212121</color>
+    <color name="md_grey_900_75">#BF212121</color>
+
+    <color name="md_blue_A200">#448AFF</color>
+    <color name="md_blue_A200_75">#BF448AFF</color>
+    <color name="md_blue_A200_50">#80448AFF</color>
+
+    <color name="md_blue_A400">#2979FF</color>
+    <color name="md_blue_A400_75">#BF2979FF</color>
+    <color name="md_blue_A400_38">#612979FF</color>
+    <color name="md_blue_A400_12">#1F2979FF</color>
+
+    <color name="md_blue_grey_900">#263238</color>
+    <color name="md_blue_grey_800">#37474F</color>
+
+    <color name="green">#47a84a</color>
+
 </resources>
