--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,24 +4,50 @@
         <!-- Primary brand color. -->
         <!--<item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>-->
-        <item name="colorPrimary">@color/teal_200</item>
+        <!--<item name="colorPrimary">@color/teal_200</item>
         <item name="colorPrimaryDark">@color/teal_700</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorAccent">@color/teal_700</item>
+        <item name="colorAccent">@color/teal_700</item>-->
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <!--<item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/black</item>-->
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>
+        <!--<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>-->
         <!-- Customize your theme here. -->
-        <item name="textColor">@color/black</item>
+<!--        <item name="textColor">@color/black</item>-->
 <!--        <item name="textColorSecondary">@color/grey_2</item>-->
-        <item name="button_background">@drawable/button_day</item>
+
+        <item name="android:forceDarkAllowed" tools:targetApi="Q">false</item>
+
+        <item name="colorPrimary">@color/accent_lightblue</item>
+        <item name="colorPrimaryVariant">?attr/colorPrimary</item>
+        <item name="colorOnPrimary">@color/md_white_1000</item>
+        <item name="colorSecondary">?attr/colorPrimary</item>
+        <item name="colorSecondaryVariant">?attr/colorPrimaryVariant</item>
+        <item name="colorOnSecondary">?attr/colorOnPrimary</item>
+        <!--<item name="colorToolbar">?attr/colorSurface</item>
+        <item name="colorOnToolbar">?attr/colorOnSurface</item>-->
+        <item name="colorSurface">@color/surface_light</item>
+        <item name="android:colorBackground">@color/background_light</item>
+        <item name="android:divider">@color/divider_light</item>
+
+        <item name="android:statusBarColor">?attr/colorPrimary</item>
+        <item name="android:navigationBarColor">?attr/colorPrimary</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">@null</item>
+        <item name="android:enforceNavigationBarContrast" tools:targetApi="Q">false</item>
+<!--        <item name="android:backgroundDimAmount">0.32</item>-->
+<!--        <item name="windowActionModeOverlay">true</item>-->
+<!--        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>-->
+
+
+        <item name="button_background">@drawable/button_bingo</item>
         <item name="edit_button_icon">@drawable/ic_baseline_edit_black</item>
         <!-- Toolbar -->
         <item name="setting_icon">@drawable/ic_baseline_settings_black</item>
         <item name="calendar_icon">@drawable/ic_baseline_calendar_black</item>
+        <item name="android:windowLightStatusBar">true</item>
+
     </style>
 </resources>
