--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -7,7 +7,9 @@
         app:key="username"
         app:title="@string/username_text"
         app:useSimpleSummaryProvider="true"
-        android:textColor="@color/teal_200"/>
+
+        />
+<!--    android:textColor="@color/teal_200"-->
 
     <ListPreference
         app:entries="@array/theme_entries"
@@ -18,6 +20,7 @@
         app:useSimpleSummaryProvider="true"
         app:allowDividerAbove="true"
         app:allowDividerBelow="true"
-        app:textColor="?attr/textColor"/>
+        />
+<!--    app:textColor="?attr/textColor"-->
 
 </PreferenceScreen>
