Adding basic color scheme in CalendarFragment2.kt

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,6 +8,8 @@
     <attr name="calendar_icon" format="reference" />
 
 <!--    Calendar-->
+    <attr name="calendar_day_default_background_color" format="color" />
+    <attr name="calendar_day_default_text_color" format="color" />
     <attr name="calendar_day_border_color" format="color" />
     <attr name="calendar_day_background_color_min" format="color" />
     <attr name="calendar_day_background_color_max" format="color" />
