Changing min color to green

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -75,6 +75,7 @@
     <color name="md_blue_grey_800">#37474F</color>
 
     <color name="green">#47a84a</color>
+    <color name="md_green_500">#4CAF50</color>
 
     <color name="md_red_A700">#D50000</color>
 
