Adding selection logic to CalendarFragment2.kt

--- a/app/src/main/res/drawable/calendar_day_shape.xml
+++ b/app/src/main/res/drawable/calendar_day_shape.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
     <stroke
-        android:width="1dp"
+        android:width="2px"
         android:color="?attr/calendar_day_border_color"/>
 
 </shape>
