--- a/app/src/main/res/layout/fragment_calendar2_day.xml
+++ b/app/src/main/res/layout/fragment_calendar2_day.xml
@@ -28,7 +28,8 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/calendar_day_notification">
+        android:background="@drawable/calendar_day_notification"
+        android:visibility="invisible">
     </TextView>
 
 
