Changing monthHeader for CalendarView to avoid text superposition

--- a/app/src/main/res/layout/fragment_calendar2_header.xml
+++ b/app/src/main/res/layout/fragment_calendar2_header.xml
@@ -9,7 +9,7 @@
         android:id="@+id/headerMonthYearText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:paddingVertical="10dp"
         android:layout_marginStart="8dp"
         android:textSize="26sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +21,8 @@
         android:id="@+id/headerAverageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginEnd="16dp"
+        android:paddingVertical="10dp"
+        android:layout_marginEnd="8dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
